--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -6,13 +6,15 @@
   <div class="size-72 absolute bottom-2 left-28 animate-pulse rounded-full bg-pink-300 opacity-50 mix-blend-multiply blur-3xl">
   </div>
 
-  <div class="h-[calc(100dvh-theme(space.24))] relative sticky top-0 flex flex-col justify-center gap-8 overflow-hidden p-4 md:h-[calc(100dvh-theme(space.40))] md:p-16">
-    <div class="absolute inset-x-0 top-0 p-2">
-      <div>
-        <span class="text-2xl font-black italic">GiTS</span>
-      </div>
+  <div class="grid-cols-[1fr_minmax(min-content,max-content)_1fr] absolute inset-x-0 top-0 grid gap-4 p-2">
+    <div class="justify-self-stretch">
+      <span class="text-2xl font-black italic">GiTS</span>
     </div>
+    <div class="w-full max-w-screen-2xl"></div>
+    <div class=""></div>
+  </div>
 
+  <div class="h-[calc(100dvh-theme(space.24))] relative sticky top-0 flex flex-col justify-center gap-8 overflow-hidden p-4 md:h-[calc(100dvh-theme(space.40))] md:p-16">
     <h1 class="text-5xl font-medium leading-tight md:text-6xl">
       Unlock Unforgettable Experiences
     </h1>
@@ -20,16 +22,16 @@
       We offer better security, faster check-in, and lower costs, ensureing more  profit for you. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
     </p>
     <div class="flex items-center gap-8 font-medium">
-      <.link class="border-2 rounded-lg border-zinc-600 p-2 px-4 hover:underline">
-        Get started
-      </.link>
-      <.link class="hover:underline">
-        Why choose <span class="font-black italic text-zinc-700">GiTS</span>?
-      </.link>
+      <!-- <.link class="border-2 rounded-lg border-zinc-600 p-2 px-4 hover:underline"> -->
+      <!--   Get started -->
+      <!-- </.link> -->
+      <!-- <.link class="hover:underline"> -->
+      <!--   Why choose <span class="font-black italic text-zinc-700">GiTS</span>? -->
+      <!-- </.link> -->
     </div>
   </div>
 
-  <div class="top-[calc(100dvh-theme(space.28))] absolute inset-0 px-2 md:top-[calc(100dvh-theme(space.52))]">
+  <div class="top-[calc(100svh-theme(space.28))] absolute inset-0 px-2 md:top-[calc(100dvh-theme(space.52))]">
     <div class="mx-auto w-full max-w-screen-2xl rounded-lg bg-white p-4 shadow md:p-12">
       <div class="mx-auto flex max-w-screen-md items-center gap-2">
         <input
