--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -8,7 +8,7 @@
 
   <div class="grid-cols-[1fr_minmax(min-content,max-content)_1fr] absolute inset-x-0 top-0 grid gap-4 p-2">
     <div class="justify-self-stretch">
-      <span class="text-2xl font-black italic text-white">GiTS</span>
+      <span class="text-2xl font-black italic text-zinc-800 dark:text-white">GiTS</span>
     </div>
     <div class="w-full max-w-screen-2xl"></div>
     <div class=""></div>
@@ -18,7 +18,7 @@
     <h1 class="text-5xl font-medium leading-tight dark:text-white md:text-6xl">
       Unlock Unforgettable Experiences
     </h1>
-    <p class="max-w-xl text-xl text-zinc-600 dark:text-zinc-300">
+    <p class="max-w-xl text-xl font-thin text-zinc-800 dark:text-zinc-200">
       We offer better security, faster check-in, and lower costs, ensureing more  profit for you. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
     </p>
     <div class="flex items-center gap-8 font-medium">
