--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -8,21 +8,34 @@
 
   <div class="grid-cols-[1fr_minmax(min-content,max-content)_1fr] fixed inset-x-0 top-0 z-10 grid items-center gap-4 p-2 text-sm font-medium">
     <div class="justify-self-stretch">
-      <span class="text-2xl font-black italic text-zinc-800 dark:text-white">GiTS</span>
+      <.link navigate="/next" class="text-2xl font-black italic text-zinc-800 dark:text-white">
+        GiTS
+      </.link>
     </div>
     <div class="flex w-full max-w-screen-2xl gap-6">
       <%= if @current_user do %>
-        <.link href="/my/events">My Events</.link>
-        <.link href="/my/events">Profile</.link>
+        <.link href="/my/tickets" class="flex items-center gap-1.5">
+          <.icon name="hero-ticket-mini" />
+          <span class="hidden sm:inline-block">My Tickets</span>
+        </.link>
+
+        <.link href="/my/tickets" class="flex items-center gap-1.5">
+          <.icon name="hero-wrench-screwdriver-mini" />
+          <span class="hidden sm:inline-block">Settings</span>
+        </.link>
       <% else %>
         <.link href="/sign-in">Sign in</.link>
       <% end %>
     </div>
-    <div class="flex justify-end pr-2">
+    <div class="flex justify-end gap-4 pr-2">
       <.link class="flex items-center gap-2 text-zinc-700">
         <.icon name="hero-question-mark-circle" />
         <span class="hidden sm:inline-block">Do you need help?</span>
       </.link>
+
+      <button class="flex flex items-center text-zinc-700 sm:hidden">
+        <.icon name="hero-bars-2" />
+      </button>
     </div>
   </div>
 
