--- a/lib/gits_web/controllers/user_html/events.html.heex
+++ b/lib/gits_web/controllers/user_html/events.html.heex
@@ -1,1 +1,4 @@
-my events
+<!-- <div class="fixed inset-0 bg-slate-100" role="none"></div> -->
+<div class="sticky top-0 z-10 space-y-8 px-2">
+  <div class="h-[calc(100dvh-theme(space.14))] rounded-xl bg-white p-4 shadow">Cheese</div>
+</div>
