--- a/lib/gits_web/components/layouts/next.html.heex
+++ b/lib/gits_web/components/layouts/next.html.heex
@@ -14,16 +14,16 @@
         GiTS
       </.link>
     </div>
-    <div class="flex w-full max-w-screen-2xl gap-6">
+    <div class="flex w-full max-w-screen-2xl gap-6 xl:gap-12">
       <%= if @current_user do %>
         <.link href="/my/tickets" class="flex items-center gap-1.5">
           <.icon name="hero-ticket-mini" />
           <span class="hidden sm:inline-block">My Tickets</span>
         </.link>
 
-        <.link href="/my/tickets" class="flex items-center gap-1.5">
-          <.icon name="hero-wrench-screwdriver-mini" />
-          <span class="hidden sm:inline-block">Settings</span>
+        <.link href="/my/profile" class="flex items-center gap-1.5">
+          <.icon name="hero-user-mini" />
+          <span class="hidden sm:inline-block">Profile</span>
         </.link>
       <% else %>
         <.link href="/sign-in">Sign in</.link>
@@ -32,7 +32,7 @@
     <div class="flex justify-end gap-4">
       <.link class="flex items-center gap-2 text-zinc-700">
         <.icon name="hero-question-mark-circle" />
-        <span class="hidden sm:inline-block">Do you need help?</span>
+        <span class="hidden sm:inline-block">Need help?</span>
       </.link>
 
       <button class="flex flex items-center text-zinc-700 sm:hidden">
