--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -15,13 +15,10 @@
   </div>
 </div>
 
-<div class="top-[calc(100svh-theme(space.28))] absolute inset-0 z-20 space-y-6 px-2 md:top-[calc(100dvh-theme(space.52))]">
-  <div
-    :for={fo <- 1..3}
-    class="mx-auto h-96 w-full max-w-screen-2xl rounded-lg bg-white p-4 shadow dark:bg-zinc-800 md:p-12"
-  >
+<div class="top-[calc(100svh-theme(space.24))] absolute inset-0 z-20 space-y-6 px-2 md:top-[calc(100dvh-theme(space.40))]">
+  <div class="mx-auto w-full max-w-screen-2xl rounded-lg bg-white p-4 shadow dark:bg-zinc-800 md:p-12">
     <.simple_form
-      action="/search"
+      action="/events"
       for={%{}}
       method="get"
       class="mx-auto flex max-w-screen-md items-center gap-2"
