--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -1,22 +1,36 @@
-<div class="fixed inset-0 bg-slate-100" role="none"></div>
+<!-- <div class="fixed inset-0 bg-slate-100" role="none"></div> -->
 <div class="sticky top-0 z-10 space-y-8 px-2">
-  <div class="mx-auto flex max-w-screen-2xl flex-wrap overflow-hidden rounded-xl bg-white pt-6 shadow">
-    <div class="size-80 flex w-full max-w-sm justify-center">
-      <%= raw(
-        "Hello this is a test for a very very long code"
-        |> EQRCode.encode()
-        |> EQRCode.svg(viewbox: true, color: "#475569", width: 384)
-      ) %>
-    </div>
-    <div class="w-full p-4 py-4">
-      <div class="space-y-6 rounded-md border p-4 text-sm">
-        <div class="grid">
-          <span class="text-zinc-500">Date and Time</span>
-          <span class="font-medium">Monday, 26th October 2024</span>
-        </div>
-        <div class="grid">
-          <span class="text-zinc-500">Event Location</span>
-          <span class="font-medium">45 Somersault Street, Conevault Walk, Sandton</span>
+  <div class="mx-auto max-w-screen-2xl rounded-xl bg-white p-2 shadow">
+    <div class="mx-auto grid max-w-xs justify-items-center py-8">
+      <span class="w-full px-4 pb-2 text-lg font-medium">
+        The Ultimate Cheese Festival. Season finalle
+      </span>
+      <div class="size-80 flex max-w-sm justify-center">
+        <%= raw(
+          "Hello this is a test for a very very long code"
+          |> EQRCode.encode()
+          |> EQRCode.svg(viewbox: true, color: "#475569", width: 320)
+        ) %>
+      </div>
+      <div class="w-full max-w-sm py-6">
+        <div class="grid grid-cols-2 gap-4 rounded-lg border p-4 text-sm">
+          <div class="*:block">
+            <span class="text-zinc-500">Ref</span>
+            <span class="font-medium">#92374923</span>
+          </div>
+          <div class="*:block">
+            <span class="text-zinc-500">Admit</span>
+            <span class="font-medium">General</span>
+          </div>
+          <div class="*:block">
+            <span class="text-zinc-500">Date</span>
+            <span class="font-medium">26th October 2024</span>
+          </div>
+
+          <div class="*:block">
+            <span class="text-zinc-500">Time</span>
+            <span class="font-medium">10:00 PM</span>
+          </div>
         </div>
       </div>
     </div>
