--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -1,8 +1,8 @@
 <!-- <div class="fixed inset-0 bg-slate-100" role="none"></div> -->
 <div class="sticky top-0 z-10 space-y-8 px-2">
-  <div class="mx-auto max-w-screen-2xl rounded-xl bg-white p-2 shadow">
+  <div class="mx-auto max-w-screen-2xl rounded-xl bg-white p-2 shadow md:p-12">
     <div class="mx-auto grid max-w-xs justify-items-center py-8">
-      <span class="w-full px-4 pb-2 text-lg font-medium">
+      <span class="w-full px-4 pb-2 text-lg font-semibold text-zinc-700">
         The Ultimate Cheese Festival. Season finalle
       </span>
       <div class="size-80 flex max-w-sm justify-center">
@@ -13,23 +13,26 @@
         ) %>
       </div>
       <div class="w-full max-w-sm py-6">
-        <div class="grid grid-cols-2 gap-4 rounded-lg border p-4 text-sm">
-          <div class="*:block">
+        <div class="grid-cols-[3fr_2fr] grid gap-4 gap-y-6 rounded-lg border p-4 text-sm">
+          <div class="space-y-2 *:block">
             <span class="text-zinc-500">Ref</span>
             <span class="font-medium">#92374923</span>
           </div>
-          <div class="*:block">
+          <div class="space-y-2 *:block">
             <span class="text-zinc-500">Admit</span>
             <span class="font-medium">General</span>
           </div>
-          <div class="*:block">
+          <div class="space-y-2 *:block">
             <span class="text-zinc-500">Date</span>
             <span class="font-medium">26th October 2024</span>
           </div>
-
-          <div class="*:block">
+          <div class="space-y-2 *:block">
             <span class="text-zinc-500">Time</span>
             <span class="font-medium">10:00 PM</span>
+          </div>
+          <div class="col-span-full space-y-2 *:block">
+            <span class="text-zinc-500">Venue</span>
+            <span class="font-medium">#92374923</span>
           </div>
         </div>
       </div>
