--- a/lib/gits_web/components/layouts/auth.html.heex
+++ b/lib/gits_web/components/layouts/auth.html.heex
@@ -1,4 +1,4 @@
-<div class="mx-auto min-h-screen max-w-screen-xl gap-4 p-4 pt-32 lg:flex lg:px-12">
+<div class="min-h-screen gap-4 bg-white p-4 pt-32 lg:flex lg:px-12">
   <.flash_group flash={@flash} />
   <main class="mx-auto w-full space-y-8 sm:max-w-md">
     <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
