--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -1,5 +1,5 @@
 <div class="h-[calc(100dvh-theme(space.24))] relative sticky top-0 flex flex-col justify-center gap-8 overflow-hidden p-4 md:h-[calc(100dvh-theme(space.40))] md:p-16">
-  <h1 class="text-5xl font-medium leading-tight dark:text-white md:text-6xl">
+  <h1 class="text-5xl font-semibold leading-tight dark:text-white md:text-6xl">
     Unlock Unforgettable Experiences
   </h1>
   <p class="max-w-xl text-xl font-thin text-zinc-800 dark:text-zinc-200">
