--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -2,21 +2,21 @@
 <div class="sticky top-0 z-10 space-y-8 px-2">
   <div class="mx-auto max-w-screen-2xl rounded-xl bg-white p-2 shadow md:p-12">
     <div class="mx-auto grid max-w-xs justify-items-center py-8">
-      <span class="w-full px-4 pb-2 text-lg font-semibold text-zinc-700">
+      <span class="w-full px-4 pb-2 text-xl font-semibold text-zinc-700">
         The Ultimate Cheese Festival. Season finalle
       </span>
       <div class="size-80 flex max-w-sm justify-center">
         <%= raw(
           "Hello this is a test for a very very long code"
           |> EQRCode.encode()
-          |> EQRCode.svg(viewbox: true, color: "#475569", width: 320)
+          |> EQRCode.svg(viewbox: true, color: "#3f3f46", width: 320)
         ) %>
       </div>
       <div class="w-full max-w-sm py-6">
         <div class="grid-cols-[3fr_2fr] grid gap-4 gap-y-6 rounded-lg border p-4 text-sm">
           <div class="space-y-2 *:block">
             <span class="text-zinc-500">Ref</span>
-            <span class="font-medium">#92374923</span>
+            <span class="font-medium">#001</span>
           </div>
           <div class="space-y-2 *:block">
             <span class="text-zinc-500">Admit</span>
@@ -32,7 +32,9 @@
           </div>
           <div class="col-span-full space-y-2 *:block">
             <span class="text-zinc-500">Venue</span>
-            <span class="font-medium">#92374923</span>
+            <span class="font-medium">
+              Artistry JHB, 22 Fredman Dr, Sandown, Sandton
+            </span>
           </div>
         </div>
       </div>
