--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -188,7 +188,7 @@
     </div>
   </div>
 
-  <div class="sticky top-0 flex items-center justify-between gap-4" id="header">
+  <div :if={false} class="sticky top-0 flex items-center justify-between gap-4" id="header">
     <div>
       <span class="text-2xl font-black italic">GiTS</span>
     </div>
