--- a/lib/gits_web/controllers/page_html/events.html.heex
+++ b/lib/gits_web/controllers/page_html/events.html.heex
@@ -1,6 +1,5 @@
-<!-- <div class="fixed inset-0 bg-slate-100" role="none"></div> -->
 <div class="sticky top-0 z-10 space-y-8 px-2">
-  <div class="min-h-[calc(100dvh-theme(space.96))] mx-auto w-full max-w-screen-2xl rounded-lg bg-white p-4 shadow dark:bg-zinc-800">
+  <div class="mx-auto w-full max-w-screen-2xl space-y-6 rounded-lg bg-white p-4 shadow dark:bg-zinc-800">
     <.simple_form
       action="/events"
       for={%{}}
@@ -18,8 +17,8 @@
       </button>
     </.simple_form>
 
-    <div class="lg:p-20">
-      <span>Nothing to see here</span>
+    <div class="p-8 p-28 text-center">
+      <span class="text-sm italic text-zinc-600">No results</span>
     </div>
   </div>
 </div>
