--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -3,7 +3,7 @@
     Unlock Unforgettable Experiences
   </h1>
   <p class="max-w-xl text-xl font-thin text-zinc-800 dark:text-zinc-200">
-    We offer better security, faster check-in, and lower costs, ensureing more  profit for you. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
+    We offer better security, faster check-in, and lower costs. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
   </p>
   <div class="flex items-center gap-8 font-medium">
     <.link class="border-2 rounded-lg border-zinc-600 dark:border-zinc-300 dark:text-zinc-100 p-2 px-4 hover:underline">
