--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -6,10 +6,16 @@
     We offer better security, faster check-in, and lower costs. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
   </p>
   <div class="flex items-center gap-8 font-medium">
-    <.link class="border-2 rounded-lg border-zinc-600 dark:border-zinc-300 dark:text-zinc-100 p-2 px-4 hover:underline">
+    <.link
+      :if={FunWithFlags.enabled?(:get_started_button)}
+      class="border-2 rounded-lg border-zinc-600 dark:border-zinc-300 dark:text-zinc-100 p-2 px-4 hover:underline"
+    >
       Get started
     </.link>
-    <.link class="hover:underline dark:text-zinc-100">
+    <.link
+      :if={FunWithFlags.enabled?(:why_choose_button)}
+      class="hover:underline dark:text-zinc-100"
+    >
       Why choose <span class="font-black italic text-zinc-700 dark:text-zinc-200">GiTS</span>?
     </.link>
   </div>
