--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -5,6 +5,7 @@
       <span class="w-full px-4 pb-2 text-xl font-semibold text-zinc-700">
         The Ultimate Cheese Festival. Season finalle
       </span>
+      <span class="w-full px-4 text-xs font-medium">#001</span>
       <div class="size-80 flex max-w-sm justify-center">
         <%= raw(
           "Hello this is a test for a very very long code"
@@ -15,14 +16,6 @@
       <div class="w-full max-w-sm py-6">
         <div class="grid-cols-[3fr_2fr] grid gap-4 gap-y-6 rounded-lg border p-4 text-sm">
           <div class="space-y-2 *:block">
-            <span class="text-zinc-500">Ref</span>
-            <span class="font-medium">#001</span>
-          </div>
-          <div class="space-y-2 *:block">
-            <span class="text-zinc-500">Admit</span>
-            <span class="font-medium">General</span>
-          </div>
-          <div class="space-y-2 *:block">
             <span class="text-zinc-500">Date</span>
             <span class="font-medium">26th October 2024</span>
           </div>
@@ -30,11 +23,15 @@
             <span class="text-zinc-500">Time</span>
             <span class="font-medium">10:00 PM</span>
           </div>
-          <div class="col-span-full space-y-2 *:block">
+          <div class="space-y-2 *:block">
             <span class="text-zinc-500">Venue</span>
             <span class="font-medium">
               Artistry JHB, 22 Fredman Dr, Sandown, Sandton
             </span>
+          </div>
+          <div class="space-y-2 *:block">
+            <span class="text-zinc-500">Admit</span>
+            <span class="font-medium">General</span>
           </div>
         </div>
       </div>
