--- a/lib/gits_web/controllers/page_html/settings.html.heex
+++ b/lib/gits_web/controllers/page_html/settings.html.heex
@@ -5,7 +5,8 @@
     <h2 class="font-poppins text-xl font-semibold text-gray-900">Account Settings</h2>
   </div>
   <.button class="flex gap-2 items-center" phx-click={JS.navigate(~p"/accounts?to=settings")}>
-    Account Settings <.icon name="hero-arrow-right-mini" />
+    Account Settings
+    <.icon name="hero-arrow-right-mini" />
   </.button>
 </div>
 
