--- a/lib/gits_web/components/layouts/next.html.heex
+++ b/lib/gits_web/components/layouts/next.html.heex
@@ -1,4 +1,4 @@
-<div class="fixed inset-0">
+<div class="fixed inset-0 bg-zinc-50">
   <div class="size-72 fixed top-0 left-4 animate-pulse rounded-full bg-purple-300 opacity-50 mix-blend-multiply blur-3xl lg:size-96">
   </div>
   <div class="size-40 fixed top-0 right-12 animate-pulse rounded-full bg-yellow-300 opacity-50 mix-blend-multiply blur-3xl md:size-52 md:right-64 xl:size-80 xl:top-40 2xl:right-96 2xl:-translate-x-64">
