--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -14,7 +14,8 @@
     </script>
     <Turnstile.script />
   </head>
-  <body class="font-poppins overflow-hidden bg-slate-50 antialiased dark:bg-slate-900">
+
+  <body class="font-poppins overflow-hidden bg-white antialiased dark:bg-slate-900">
     <%= @inner_content %>
   </body>
 </html>
