--- a/lib/gits_web/live/event_live.html.heex
+++ b/lib/gits_web/live/event_live.html.heex
@@ -1,14 +1,13 @@
 <div class="space-y-4 md:space-y-8">
   <div class="grid gap-4 sm:grid-cols-[18rem_auto] lg:grid-cols-[30rem_auto] lg:gap-12">
     <div class="aspect-[3/2] overflow-hidden rounded-2xl">
-      <img
-        src={@feature_image}
-        alt="Feature image"
-        class="h-full w-full object-cover transition-transform duration-300 hover:scale-110"
-      />
+      <img src={@feature_image} alt="Feature image"
+        class="h-full w-full object-cover transition-transform duration-300 hover:scale-110" />
     </div>
     <div class="flex flex-col gap-2 lg:gap-4">
-      <h1 class="text-2xl font-semibold lg:text-3xl"><%= @event.name %></h1>
+      <h1 class="text-2xl font-semibold lg:text-3xl">
+        <%= @event.name %>
+      </h1>
       <div class="flex items-center gap-4">
         <div class="flex flex-col items-center rounded-lg bg-white bg-zinc-50 p-3 py-2.5">
           <span class="text-lg font-bold tabular-nums leading-4 text-gray-800">
@@ -19,7 +18,9 @@
           </span>
         </div>
         <div class="grid gap-1 text-sm">
-          <span><%= @event.starts_at |> Timex.format!("%R %p on %A", :strftime) %></span>
+          <span>
+            <%= @event.starts_at |> Timex.format!("%R %p on %A", :strftime) %>
+          </span>
           <span>hosted by ZATechRadio</span>
         </div>
       </div>
@@ -28,14 +29,16 @@
         <span class="line-clamp-2 px-1 text-sm text-zinc-500">
           <%= if @event.venue do %>
             <%= @event.venue.name %>, <%= @event.venue.formatted_address %>
-          <% else %>
-            Venue not confirmed
-          <% end %>
+                <% else %>
+                  Venue not confirmed
+                  <% end %>
         </span>
       </div>
       <div class="rounded-xl border-gray-100 bg-gray-50 p-2 text-sm text-zinc-600">
         <span class="font-semibold text-zinc-900">About this event</span>
-        <p class="whitespace-pre-line"><%= @event.description %></p>
+        <p class="whitespace-pre-line">
+          <%= @event.description %>
+        </p>
       </div>
     </div>
   </div>
@@ -47,94 +50,80 @@
     <div :for={ticket <- @event.tickets} id={"#{ticket.id}"}>
       <div class="flex items-center gap-4 rounded-xl border p-4">
         <div class="grid grow text-sm">
-          <span class="grow text-xl font-medium"><%= ticket.name %></span>
+          <span class="grow text-xl font-medium">
+            <%= ticket.name %>
+          </span>
           <span class=" text-sm text-gray-500">
-            <%= if ticket.price > 0 do %>
+            <%= if ticket.price> 0 do %>
               R <%= ticket.price %>
-            <% else %>
-              FREE
-            <% end %>
+                <% else %>
+                  FREE
+                  <% end %>
           </span>
         </div>
 
         <div class="flex h-9 items-center gap-2 rounded-md">
-          <%= if ticket.customer_reserved_instance_count > 0 do %>
-            <button
-              class="flex rounded-md bg-gray-100 p-2"
-              phx-click={JS.push("remove_ticket", value: %{id: ticket.id})}
-            >
+          <%= if ticket.customer_reserved_instance_count> 0 do %>
+            <button class="flex rounded-md bg-gray-100 p-2" phx-click={JS.push("remove_ticket", value: %{id:
+              ticket.id})}>
               <.icon name="hero-minus-mini" />
             </button>
 
             <span class="w-8 text-center tabular-nums">
               <%= ticket.customer_reserved_instance_count %>
             </span>
-          <% end %>
+            <% end %>
 
-          <button
-            class="flex rounded-md bg-gray-100 p-2"
-            phx-click={JS.push("add_ticket", value: %{id: ticket.id})}
-          >
-            <.icon name="hero-plus-mini" />
-          </button>
+              <button class="flex rounded-md bg-gray-100 p-2" phx-click={JS.push("add_ticket", value: %{id:
+                ticket.id})}>
+                <.icon name="hero-plus-mini" />
+              </button>
         </div>
       </div>
     </div>
-    <div
-      :if={@event.customer_reserved_instance_count > 0 or @event.customer_has_tickets}
-      class="sticky bottom-3 col-span-full flex w-full grow justify-end gap-4 rounded-2xl border bg-white p-4 shadow-lg lg:static lg:shadow-none"
-    >
-      <%= if @event.customer_reserved_instance_count > 0  do %>
+    <div :if={@event.customer_reserved_instance_count> 0 or @event.customer_has_tickets}
+      class="sticky bottom-3 col-span-full flex w-full grow justify-end gap-4 rounded-2xl border bg-white p-4 shadow-lg
+      lg:static lg:shadow-none"
+      >
+      <%= if @event.customer_reserved_instance_count> 0 do %>
         <div class="grid grow grow text-sm">
           <div :if={@event.customer_has_tickets} class=""></div>
           <div :if={@event.customer_has_tickets} class="">
             <span>You have tickets</span>
           </div>
         </div>
-        <.button
-          disabled={@event.customer_reserved_instance_count == 0}
-          phx-click={show_modal("summary-modal")}
-        >
+        <.button disabled={@event.customer_reserved_instance_count==0} phx-click={show_modal("summary-modal")}>
           Continue
         </.button>
-      <% else %>
-        <div :if={@event.customer_has_tickets} class="flex grow">
-          <div class="grid grow grow text-sm">
-            <div :if={@event.customer_has_tickets} class=""></div>
-            <div :if={@event.customer_has_tickets} class="">
-              <span>
-                You have <%= @event.customer_secured_instance_count %> ticket<%= if @event.customer_secured_instance_count ==
-                                                                                      1,
-                                                                                    do: "",
-                                                                                    else: "s" %>
-              </span>
+        <% else %>
+          <div :if={@event.customer_has_tickets} class="flex grow">
+            <div class="grid grow grow text-sm">
+              <div :if={@event.customer_has_tickets} class=""></div>
+              <div :if={@event.customer_has_tickets} class="">
+                <span>
+                  You have <%= @event.customer_secured_instance_count %> ticket<%= if(
+                      @event.customer_secured_instance_count==1, do: "" , else: "s" ) %>
+                </span>
+              </div>
             </div>
+            <.button phx-click={ show_modal("tickets-modal") |> JS.patch("/events/#{@event.masked_id}?show=tickets")
+              }>
+              Show tickets
+            </.button>
           </div>
-          <.button phx-click={
-            show_modal("tickets-modal") |> JS.patch("/events/#{@event.masked_id}?show=tickets")
-          }>
-            Show tickets
-          </.button>
-        </div>
-      <% end %>
+          <% end %>
     </div>
   </div>
 </div>
 
-<.modal
-  id="tickets-modal"
-  show={@show_tickets_modal}
-  on_cancel={JS.patch("/events/#{@event.masked_id}")}
->
+<.modal id="tickets-modal" show={@show_tickets_modal} on_cancel={JS.patch("/events/#{@event.masked_id}")}>
   <h2 class="pb-4 text-lg font-bold">Your tickets</h2>
-  <GitsWeb.EventComponents.customer_tickets_swiper
-    :if={@event.customer_has_tickets == true and is_list(@customer.scannable_instances)}
-    customer={@customer}
-  />
+  <GitsWeb.EventComponents.customer_tickets_swiper :if={ @event.customer_has_tickets==true and
+    is_list(@customer.scannable_instances) } customer={@customer} />
 </.modal>
 
 <.modal :if={@customer} id="summary-modal" on_cancel={JS.push("clear_basket")}>
-  <%= if @basket != nil and @basket.state == :settled do %>
+  <%= if @basket !=nil and @basket.state==:settled do %>
     <div phx-hook="Confetti" class="space-y-2" id="confetti">
       <p class="font-medium">All done!</p>
       <p class="text-gray-700">
@@ -143,45 +132,42 @@
       </p>
       <p>See you there!</p>
     </div>
-  <% else %>
-    <%= if @customer.tickets_count > 0 do %>
-      <h3 class="font-medium">Summary</h3>
-      <div class="mt-4 rounded-lg border p-2 px-4">
-        <div
-          :for={
-            ticket <-
-              Enum.filter(@event.tickets, fn ticket ->
-                ticket.customer_reserved_instance_count > 0
-              end)
-          }
-          class="flex items-center justify-between"
-        >
-          <span class="text-sm">
-            <%= ticket.customer_reserved_instance_count %> &times; <%= ticket.name %>
-          </span>
-          <span class="text-gray-500">
-            <%= if ticket.customer_reserved_instance_total > 0 do %>
-              R <%= ticket.customer_reserved_instance_total %>
-            <% else %>
-              FREE
-            <% end %>
+    <% else %>
+      <%= if @customer.tickets_count> 0 do %>
+        <h3 class="font-medium">Summary</h3>
+        <div class="mt-4 rounded-lg border p-2 px-4">
+          <div :for={ ticket <- Enum.filter(@event.tickets, fn ticket ->
+            ticket.customer_reserved_instance_count > 0
+            end)
+            }
+            class="flex items-center justify-between"
+            >
+            <span class="text-sm">
+              <%= ticket.customer_reserved_instance_count %> &times; <%= ticket.name %>
+            </span>
+            <span class="text-gray-500">
+              <%= if ticket.customer_reserved_instance_total> 0 do %>
+                R <%= ticket.customer_reserved_instance_total %>
+                  <% else %>
+                    FREE
+                    <% end %>
+            </span>
+          </div>
+        </div>
+
+        <div class="flex justify-between p-2 px-4 font-semibold">
+          <span>Total</span>
+          <span class="">
+            <%= if @event.customer_reserved_instance_total> 0 do %>
+              R <%= @event.customer_reserved_instance_total %>
+                <% else %>
+                  FREE
+                  <% end %>
           </span>
         </div>
-      </div>
-
-      <div class="flex justify-between p-2 px-4 font-semibold">
-        <span>Total</span>
-        <span class="">
-          <%= if @event.customer_reserved_instance_total > 0 do %>
-            R <%= @event.customer_reserved_instance_total %>
-          <% else %>
-            FREE
+        <div class="flex justify-end pt-4">
+          <.button phx-click="settle_basket">Finish</.button>
+        </div>
+        <% end %>
           <% end %>
-        </span>
-      </div>
-      <div class="flex justify-end pt-4">
-        <.button phx-click="settle_basket">Finish</.button>
-      </div>
-    <% end %>
-  <% end %>
 </.modal>
