--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -1,8 +1,15 @@
 <!-- <div class="fixed inset-0 bg-slate-100" role="none"></div> -->
-<div class="sticky top-0 z-10 space-y-8 px-2">
-  <div class="h-[calc(100dvh-theme(space.14))] mx-auto flex max-w-screen-2xl gap-8 rounded-xl bg-white p-4 shadow">
-    <.link :for={id <- 1..4} class="" href={"/my/tickets/#{id}"}>
-      <div class="border p-2">
+<div class="sticky top-0 z-10 space-y-8 px-2 pb-2">
+  <div class="h-[calc(100dvh-theme(space.14))]x mx-auto grid max-w-screen-2xl flex-wrap gap-8 rounded-xl bg-white p-4 shadow md:grid-cols-2 lg:grid-cols-4">
+    <div class="col-span-full">
+      <div class="grid grid-cols-2 gap-4 rounded-lg p-1 text-sm font-medium text-zinc-500 *:rounded-md *:p-2 *:text-center first:*:bg-zinc-100 first:*:text-zinc-900 sm:max-w-sm">
+        <span>Upcoming</span>
+        <span>Completed</span>
+      </div>
+    </div>
+    <.link :for={id <- 1..8} class="w-full gap-4 flex" href={"/my/tickets/#{id}"}>
+      <div class="aspect-[4/5] h-20 bg-zinc-200">c</div>
+      <div class="w-full border">
         <span>
           <%= id %>
         </span>
