--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -1,5 +1,5 @@
 <!-- <div class="fixed inset-0 bg-zinc-50" role="none"></div> -->
-<div class="sticky top-0 z-10 space-y-8 px-2">
+<div class="sticky top-0 z-10 space-y-8 px-2 pb-2">
   <div class="size-80 sticky top-2 -z-10 mx-auto flex max-w-sm justify-center">
     <%= raw(
       "Hello this is a test for a very very long code"
@@ -14,34 +14,72 @@
     ) %>
   </div>
 
-  <div class="z-20 mx-auto max-w-screen-2xl rounded-xl bg-white p-2 shadow md:p-12">
-    <div class="mx-auto grid max-w-xs justify-items-center py-8">
-      <span class="w-full px-4 pb-2 text-xl font-semibold text-zinc-700">
-        The Ultimate Cheese Festival. Season finalle
-      </span>
-      <span class="w-full px-4 text-xs font-medium">#001</span>
-      <div class="w-full max-w-sm py-6">
-        <div class="grid-cols-[3fr_2fr] grid gap-4 gap-y-6 rounded-lg border p-4 text-sm">
-          <div class="space-y-2 *:block">
-            <span class="text-zinc-500">Date</span>
-            <span class="font-medium">26th October 2024</span>
-          </div>
-          <div class="space-y-2 *:block">
-            <span class="text-zinc-500">Time</span>
-            <span class="font-medium">10:00 PM</span>
-          </div>
-          <div class="space-y-2 *:block">
-            <span class="text-zinc-500">Venue</span>
-            <span class="font-medium">
-              Artistry JHB, 22 Fredman Dr, Sandown, Sandton
-            </span>
-          </div>
-          <div class="space-y-2 *:block">
-            <span class="text-zinc-500">Admit</span>
-            <span class="font-medium">General</span>
-          </div>
-        </div>
+  <div class="z-20 mx-auto grid max-w-screen-2xl gap-4 rounded-xl bg-white p-6 shadow *:grid md:p-12">
+    <div>
+      <span class="text-sm text-zinc-500">Ticket</span>
+      <div class="flex justify-between">
+        <span class="font-semibold">General</span>
+        <span class="font-semibold">#1</span>
       </div>
     </div>
+    <div>
+      <span class="text-sm text-zinc-500">Event</span>
+      <span class="font-semibold">The Ultimate Cheese Festival</span>
+    </div>
+    <div>
+      <span class="text-sm text-zinc-500">Date and Time</span>
+      <span class="font-semibold">Monday, Dec 24 &bull; 06:00 PM</span>
+    </div>
+    <div>
+      <span class="text-sm text-zinc-500">Event Location</span>
+      <span class="font-semibold">Argistry JHB</span>
+    </div>
+    <div>
+      <span class="text-sm text-zinc-500">Hosted by</span>
+      <span class="font-semibold">Treehouse Inc</span>
+    </div>
+    <!-- <div class="mx-auto grid max-w-xs justify-items-center py-8"> -->
+    <!--   <span class="w-full px-4 pb-2 text-xl font-semibold text-zinc-700"> -->
+    <!--     The Ultimate Cheese Festival. Season finalle -->
+    <!--   </span> -->
+    <!--   <span class="w-full px-4 text-xs font-medium">#001</span> -->
+    <!--   <div class="w-full max-w-sm py-6"> -->
+    <!--     <div class="grid-cols-[3fr_2fr] grid gap-4 gap-y-6 rounded-lg border p-4 text-sm"> -->
+    <!--       <div class="space-y-2 *:block"> -->
+    <!--         <span class="text-zinc-500">Date</span> -->
+    <!--         <span class="font-medium">26th October 2024</span> -->
+    <!--       </div> -->
+    <!--       <div class="space-y-2 *:block"> -->
+    <!--         <span class="text-zinc-500">Time</span> -->
+    <!--         <span class="font-medium">10:00 PM</span> -->
+    <!--       </div> -->
+    <!--       <div class="space-y-2 *:block"> -->
+    <!--         <span class="text-zinc-500">Venue</span> -->
+    <!--         <span class="font-medium"> -->
+    <!--           Artistry JHB, 22 Fredman Dr, Sandown, Sandton -->
+    <!--         </span> -->
+    <!--       </div> -->
+    <!--       <div class="space-y-2 *:block"> -->
+    <!--         <span class="text-zinc-500">Admit</span> -->
+    <!--         <span class="font-medium">General</span> -->
+    <!--       </div> -->
+    <!--     </div> -->
+    <!--   </div> -->
+    <!-- </div> -->
+  </div>
+
+  <div class="z-20 mx-auto grid max-w-screen-2xl gap-4 rounded-xl bg-white p-6 shadow *:flex *:justify-between md:p-12">
+    <div>
+      <span class="text-sm text-zinc-500">Display name</span>
+      <span class="text-sm font-semibold">Sdu</span>
+    </div>
+
+    <div>
+      <span class="text-sm text-zinc-500"></span>
+      <span class="text-sm font-medium">Edit</span>
+    </div>
+  </div>
+
+  <div class="sticky bottom-4 z-20 mx-auto grid max-w-screen-2xl gap-4 rounded-xl bg-white p-4 shadow *:grid md:p-12">
   </div>
 </div>
