--- a/lib/gits_web/live/dashboard_live/setup_paystack.html.heex
+++ b/lib/gits_web/live/dashboard_live/setup_paystack.html.heex
@@ -1,4 +1,4 @@
-<!-- <h1 class="text-4xl font-semibold"><%= @title %></h1> -->
+<h1 class="text-4xl font-semibold"><%= @title %></h1>
 <.simple_form
   :let={f}
   for={@form}
